--- a/module_common/src/main/res/layout/common_status_refresh_list.xml
+++ b/module_common/src/main/res/layout/common_status_refresh_list.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/common_refresh_list"/>
+    <include
+        android:id="@+id/included_refresh_list"
+        layout="@layout/common_refresh_list"/>
 
 </FrameLayout>
