--- a/module_common/src/main/res/layout/common_title_bar_frame_refresh_list.xml
+++ b/module_common/src/main/res/layout/common_title_bar_frame_refresh_list.xml
@@ -4,8 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/common_refresh_list"/>
+    <include
+        android:id="@+id/included_title_bar"
+        layout="@layout/common_refresh_list"/>
 
-    <include layout="@layout/common_status_refresh_list"/>
+    <include
+        android:id="@+id/included_status_refresh_list"
+        layout="@layout/common_status_refresh_list"/>
 
 </FrameLayout>
