--- a/module_common/src/main/res/layout/common_title_bar_tab_view_pager.xml
+++ b/module_common/src/main/res/layout/common_title_bar_tab_view_pager.xml
@@ -5,10 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/common_title_bar"/>
+    <include
+        android:id="@+id/included_title_bar"
+        layout="@layout/common_title_bar"/>
 
-    <include layout="@layout/common_tab_layout"/>
+    <include
+        android:id="@+id/included_tab_layout"
+        layout="@layout/common_tab_layout"/>
 
-    <include layout="@layout/common_status_refresh_list"/>
+    <include
+        android:id="@+id/included_status_refresh_list"
+        layout="@layout/common_status_refresh_list"/>
 
 </LinearLayout>
