--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <include layout="@layout/common_title_bar"/>
+
     <ImageView
         android:id="@+id/iv_image"
         android:layout_width="200dp"
