--- a/module_common/src/main/res/values/themes.xml
+++ b/module_common/src/main/res/values/themes.xml
@@ -8,8 +8,8 @@
         <!--禁止按钮上的文本自动大写-->
         <item name="android:textAllCaps">false</item>
         <!--状态栏和导航栏设置不使用-->
-        <item name="android:windowTranslucentStatus" tools:ignore="NewApi">true</item>
-        <item name="android:windowTranslucentNavigation" tools:ignore="NewApi">true</item>
+        <item name="android:windowTranslucentStatus" tools:ignore="NewApi">false</item>
+        <item name="android:windowTranslucentNavigation" tools:ignore="NewApi">false</item>
         <!--使用刘海-->
         <item name="android:windowLayoutInDisplayCutoutMode" tools:ignore="NewApi">shortEdges</item>
         <!--Android-->
