--- a/module_common/src/main/res/layout/common_title_bar_frame_refresh_list.xml
+++ b/module_common/src/main/res/layout/common_title_bar_frame_refresh_list.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent">
 
     <include
-        android:id="@+id/included_title_bar"
-        layout="@layout/common_refresh_list"/>
-
-    <include
         android:id="@+id/included_status_refresh_list"
         layout="@layout/common_status_refresh_list"/>
+
+    <include
+        android:id="@+id/included_title_bar"
+        layout="@layout/common_title_bar"/>
 
 </FrameLayout>
