--- a/module_common/src/main/res/layout/common_tab_layout.xml
+++ b/module_common/src/main/res/layout/common_tab_layout.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_58"
+    android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     app:tabRippleColor="@null"
     app:tabIndicatorFullWidth="false"
