--- a/module_common/src/main/res/values/colors.xml
+++ b/module_common/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="color_FF48494D">#FF48494D</color>
+    <color name="color_FFF6F8FB">#FFF6F8FB</color>
 </resources>
