--- a/module_common/src/main/res/values/colors.xml
+++ b/module_common/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="color_FF48494D">#FF48494D</color>
     <color name="color_FFF6F8FB">#FFF6F8FB</color>
+    <color name="color_FF000000">#FF000000</color>
 </resources>
