--- a/module_common/src/main/res/layout/common_title_bar_tab_view_pager.xml
+++ b/module_common/src/main/res/layout/common_title_bar_tab_view_pager.xml
@@ -11,10 +11,15 @@
     <include
         android:id="@+id/included_tab_layout"
         layout="@layout/common_tab_layout"/>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vp_view_pager"
+    <com.at.common.widget.RefreshSlideLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent">
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+    </com.at.common.widget.RefreshSlideLayout>
 </LinearLayout>
