--- a/module_common/src/main/res/values-sw1024dp/dimens.xml
+++ b/module_common/src/main/res/values-sw1024dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">68.2667sp</dimen>
     	
+    <dimen name="sp_26">70.9973sp</dimen>
+    	
+    <dimen name="sp_27">73.7280sp</dimen>
+    	
     <dimen name="sp_28">76.4587sp</dimen>
     	
     <dimen name="sp_30">81.9200sp</dimen>
