--- a/module_common/src/main/res/values-sw533dp/dimens.xml
+++ b/module_common/src/main/res/values-sw533dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">35.5333sp</dimen>
     	
+    <dimen name="sp_26">36.9547sp</dimen>
+    	
+    <dimen name="sp_27">38.3760sp</dimen>
+    	
     <dimen name="sp_28">39.7973sp</dimen>
     	
     <dimen name="sp_30">42.6400sp</dimen>
