--- a/module_common/src/main/res/values-sw592dp/dimens.xml
+++ b/module_common/src/main/res/values-sw592dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">39.4667sp</dimen>
     	
+    <dimen name="sp_26">41.0453sp</dimen>
+    	
+    <dimen name="sp_27">42.6240sp</dimen>
+    	
     <dimen name="sp_28">44.2027sp</dimen>
     	
     <dimen name="sp_30">47.3600sp</dimen>
