--- a/module_common/src/main/res/values-sw961dp/dimens.xml
+++ b/module_common/src/main/res/values-sw961dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">64.0667sp</dimen>
     	
+    <dimen name="sp_26">66.6293sp</dimen>
+    	
+    <dimen name="sp_27">69.1920sp</dimen>
+    	
     <dimen name="sp_28">71.7547sp</dimen>
     	
     <dimen name="sp_30">76.8800sp</dimen>
