--- a/module_common/src/main/res/values-sw1280dp/dimens.xml
+++ b/module_common/src/main/res/values-sw1280dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">85.3333sp</dimen>
     	
+    <dimen name="sp_26">88.7467sp</dimen>
+    	
+    <dimen name="sp_27">92.1600sp</dimen>
+    	
     <dimen name="sp_28">95.5733sp</dimen>
     	
     <dimen name="sp_30">102.4000sp</dimen>
