--- a/module_common/src/main/res/values-sw1365dp/dimens.xml
+++ b/module_common/src/main/res/values-sw1365dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">91.0000sp</dimen>
     	
+    <dimen name="sp_26">94.6400sp</dimen>
+    	
+    <dimen name="sp_27">98.2800sp</dimen>
+    	
     <dimen name="sp_28">101.9200sp</dimen>
     	
     <dimen name="sp_30">109.2000sp</dimen>
