--- a/module_common/src/main/res/values-sw384dp/dimens.xml
+++ b/module_common/src/main/res/values-sw384dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">25.6000sp</dimen>
     	
+    <dimen name="sp_26">26.6240sp</dimen>
+    	
+    <dimen name="sp_27">27.6480sp</dimen>
+    	
     <dimen name="sp_28">28.6720sp</dimen>
     	
     <dimen name="sp_30">30.7200sp</dimen>
