--- a/module_common/src/main/res/values-sw392dp/dimens.xml
+++ b/module_common/src/main/res/values-sw392dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">26.1333sp</dimen>
     	
+    <dimen name="sp_26">27.1787sp</dimen>
+    	
+    <dimen name="sp_27">28.2240sp</dimen>
+    	
     <dimen name="sp_28">29.2693sp</dimen>
     	
     <dimen name="sp_30">31.3600sp</dimen>
