--- a/module_common/src/main/res/values-sw411dp/dimens.xml
+++ b/module_common/src/main/res/values-sw411dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">27.4000sp</dimen>
     	
+    <dimen name="sp_26">28.4960sp</dimen>
+    	
+    <dimen name="sp_27">29.5920sp</dimen>
+    	
     <dimen name="sp_28">30.6880sp</dimen>
     	
     <dimen name="sp_30">32.8800sp</dimen>
