--- a/module_common/src/main/res/values-sw432dp/dimens.xml
+++ b/module_common/src/main/res/values-sw432dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">28.8000sp</dimen>
     	
+    <dimen name="sp_26">29.9520sp</dimen>
+    	
+    <dimen name="sp_27">31.1040sp</dimen>
+    	
     <dimen name="sp_28">32.2560sp</dimen>
     	
     <dimen name="sp_30">34.5600sp</dimen>
