--- a/module_common/src/main/res/values-sw662dp/dimens.xml
+++ b/module_common/src/main/res/values-sw662dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">44.1333sp</dimen>
     	
+    <dimen name="sp_26">45.8987sp</dimen>
+    	
+    <dimen name="sp_27">47.6640sp</dimen>
+    	
     <dimen name="sp_28">49.4293sp</dimen>
     	
     <dimen name="sp_30">52.9600sp</dimen>
