--- a/module_common/src/main/res/values-sw768dp/dimens.xml
+++ b/module_common/src/main/res/values-sw768dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">51.2000sp</dimen>
     	
+    <dimen name="sp_26">53.2480sp</dimen>
+    	
+    <dimen name="sp_27">55.2960sp</dimen>
+    	
     <dimen name="sp_28">57.3440sp</dimen>
     	
     <dimen name="sp_30">61.4400sp</dimen>
