--- a/module_common/src/main/res/values-sw820dp/dimens.xml
+++ b/module_common/src/main/res/values-sw820dp/dimens.xml
@@ -821,6 +821,10 @@
     	
     <dimen name="sp_25">54.6667sp</dimen>
     	
+    <dimen name="sp_26">56.8533sp</dimen>
+    	
+    <dimen name="sp_27">59.0400sp</dimen>
+    	
     <dimen name="sp_28">61.2267sp</dimen>
     	
     <dimen name="sp_30">65.6000sp</dimen>
