--- a/module_common/src/main/res/values/dimens.xml
+++ b/module_common/src/main/res/values/dimens.xml
@@ -415,6 +415,8 @@
     <dimen name="sp_23">23sp</dimen>
     <dimen name="sp_24">24sp</dimen>
     <dimen name="sp_25">25sp</dimen>
+    <dimen name="sp_26">26sp</dimen>
+    <dimen name="sp_27">27sp</dimen>
     <dimen name="sp_28">28sp</dimen>
     <dimen name="sp_30">30sp</dimen>
     <dimen name="sp_32">32sp</dimen>
